Adds memory leak impl